# pytest-skip-slow

./: CHANGELOG.md  README.md  plugin.py  pyproject.toml  pytest_skip_slow.py  tox.ini
.github/workflows/: .deployment.md  main.yml  publish-to-pypi.yml
examples/: test_hugemem.py  test_slow.py
tests/: test_plugin.py
