[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-slow"
authors = [{name = "Brian Okken", email = "brian+pypi@pythontest.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest>=6.2.0"]
requires-python=">=3.7"

[project.urls]
Home = "https://github.com/okken/pytest-slow"

[project.entry-points."pytest11"]
plugin = "plugin"

[project.optional-dependencies]
test = [ "tox" ]

[tool.flit.module]
name = "plugin"
