[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-skip-slow"
authors = [{name = "Brian Okken", email = "brian+pypi@pythontest.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Pytest",
]
dynamic = ["version", "description"]
dependencies = ["pytest>=6.2.0"]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/okken/pytest-skip-slow"

[project.entry-points.pytest11]
skip_slow = "pytest_skip_slow"

[tool.flit.module]
name = "pytest_skip_slow"
